--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,9 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
+  },
+  "dependencies": {
+    "angularfire": "^2.0.1",
+    "firebase": "^3.2.1"
   }
 }
