--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "cordova-plugin-camera",
     "cordova-plugin-image-picker",
     "com-badrit-base64",
-    "cordova-plugin-inappbrowser"
+    "cordova-plugin-inappbrowser",
+    "cordova-plugin-geolocation"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
